--- a/index.html
+++ b/index.html
@@ -3,81 +3,215 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perfect Win</title>
+  <title>Perfect Win Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Share+Tech+Mono&display=swap');
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      margin: 0;
-      padding: 0;
+      font-family: 'Share Tech Mono', monospace;
       background: black;
       color: #00ffcc;
-      font-family: 'Share Tech Mono', monospace;
+      overflow-x: hidden;
+    }
+
+    /* Matrix Effect */
+    canvas { position: fixed; top: 0; left: 0; z-index: -1; }
+
+    /* Hero Section */
+    .hero {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       text-align: center;
+      padding: 0 20px;
     }
 
-    h1 {
+    .hero h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
+      font-size: 4rem;
       color: #00ffe5;
       text-shadow: 0 0 15px #00ffe5, 0 0 30px #00ffe5;
-      margin-bottom: 10px;
-    }
-
-    p {
-      max-width: 700px;
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #e0e0e0;
-    }
-
-    .signature {
-      margin-top: 30px;
-      font-size: 0.9rem;
-      color: #888;
-    }
-
-    .glow {
       animation: glow 2s ease-in-out infinite alternate;
     }
 
     @keyframes glow {
-      from {
-        text-shadow: 0 0 5px #00ffe5, 0 0 10px #00ffe5;
-      }
-      to {
-        text-shadow: 0 0 20px #00ffe5, 0 0 40px #00ffe5;
-      }
+      from { text-shadow: 0 0 10px #00ffe5, 0 0 20px #00ffe5; }
+      to { text-shadow: 0 0 25px #00ffe5, 0 0 50px #00ffe5; }
     }
+
+    .hero p {
+      margin-top: 20px;
+      font-size: 1.2rem;
+      max-width: 800px;
+      line-height: 1.6;
+    }
+
+    /* Sections */
+    section {
+      padding: 80px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    section h2 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2rem;
+      color: #00ffe5;
+      margin-bottom: 40px;
+      text-align: center;
+      text-shadow: 0 0 10px #00ffe5;
+    }
+
+    /* Projects */
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+    }
+
+    .project-card {
+      background: rgba(0,255,204,0.05);
+      border: 1px solid #00ffcc;
+      padding: 20px;
+      border-radius: 12px;
+      transition: transform 0.3s, box-shadow 0.3s;
+      cursor: pointer;
+    }
+
+    .project-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 0 20px #00ffe5;
+    }
+
+    .project-card h3 {
+      margin-bottom: 15px;
+      color: #00ffe5;
+    }
+
+    .project-card p {
+      font-size: 0.95rem;
+      color: #e0e0e0;
+    }
+
+    /* About Section */
+    .typewriter {
+      overflow: hidden;
+      border-right: .15em solid #00ffcc;
+      white-space: nowrap;
+      animation: typing 6s steps(60, end), blink-caret .75s step-end infinite;
+      font-size: 1.1rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+
+    @keyframes blink-caret {
+      50% { border-color: transparent }
+    }
+
+    /* Contact */
+    .contact a {
+      display: inline-block;
+      margin: 10px 15px;
+      color: #00ffcc;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .contact a:hover {
+      color: #ffffff;
+    }
+
   </style>
 </head>
 <body>
-  <h1 class="glow">Perfect Win</h1>
-  <p>
-    Since 2017, I have been moving in silence. While others wasted their time,
-    I was collecting knowledge, training my mind, and sharpening my skills.
-    Step by step, I built my own world in the shadows.
-  </p>
-  <p>
-    This summer, I revealed my strength. I launched projects, created my own
-    website <b>alexanderoff.store</b>, and worked until the sun rose three times without sleep.
-    I turned ideas into reality, and reality into unmatched influence.
-  </p>
-  <p>
-    Like L, I observe from the darkness, always calculating, always ahead.
-    Like Light, I don’t just exist — I <b>rewrite the world</b>.
-  </p>
-  <p>
-    Now my name rises, my reach expands, and there is nothing I cannot achieve,
-    because I have already calculated the ending.
-  </p>
-  <h2 class="glow">“This is my perfect victory.”</h2>
+  <canvas id="matrix"></canvas>
 
-  <div class="signature">© 2025 alexanderoff.store</div>
+  <section class="hero">
+    <h1>Perfect Win</h1>
+    <p>Since 2017, I have been moving in silence. While others wasted their time, I collected knowledge, sharpened my skills, and built my world in the shadows. This summer, I revealed my strength and launched my own projects.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="project-card">
+        <h3>Alexanderoff Store</h3>
+        <p>My main project: a fully functional store showcasing my works and skills. Built and maintained entirely by me.</p>
+      </div>
+      <div class="project-card">
+        <h3>Perfect Win</h3>
+        <p>Portfolio site with dynamic animations and unique design, representing my journey from student to master.</p>
+      </div>
+      <div class="project-card">
+        <h3>Other Projects</h3>
+        <p>Multiple small projects in coding, networking, and tech experimentation. Constantly learning and innovating.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <div class="typewriter">
+      Like L, I observe from the shadows. Like Light, I rewrite the world. Nothing is impossible when you’ve already calculated the ending. I am a master, an innovator, a digital pioneer. This is my perfect victory.
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <div class="contact">
+      <a href="https://alexanderoff.store" target="_blank">Website</a>
+      <a href="https://github.com/alexanderofficial09" target="_blank">GitHub</a>
+      <a href="mailto:alexander@alexanderoff.store">Email</a>
+    </div>
+  </section>
+
+  <script>
+    // Matrix Effect
+    const canvas = document.getElementById('matrix');
+    const ctx = canvas.getContext('2d');
+
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%^&*()*&^%';
+    const fontSize = 16;
+    const columns = canvas.width / fontSize;
+
+    const drops = Array(Math.floor(columns)).fill(1);
+
+    function draw() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = '#00ffcc';
+      ctx.font = fontSize + 'px monospace';
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = letters.charAt(Math.floor(Math.random() * letters.length));
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
+    }
+
+    setInterval(draw, 50);
+
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+  </script>
 </body>
 </html>
